# aevum

./: .gitignore  .mcp.json  CLAUDE.local.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DECISION-LOG.md  EXEC-incremental-for-sonnet.md  LICENSE  PATCH-immune-system.md  README.md  RULES-ARCHITECTURE.md  RULES-CODING.md  RULES-PACR.md  SPEC-AGENTCARD.md  STRATEGY-3-leverage-points.md  state_vault
crates/aevum-agi/: .cursor_rules  .env  ARCHITECTURE_HISTORY.md  ATOMIC META-EVOLVER WHITEPAPER.md  Begin with the End in Mind.md  CLAUDE.md  Cargo.toml  Claude Opus Agent Teams Prompt.md  Dockerfile  End-state.md  GOVERNANCE.md  KVS_STANDARD_v0.1.md  KVS_STANDARD_v0.2.md  LEVERAGE.md  ONTO- ATOMIC META-EVOLVER whitepaper.md  POWERLAW.md  README.md  Tick6.2log020426.md  WHITEPAPER_EN.md  WHITEPAPER_ZH.md  ai prompt.md  atomic_core.py  autopoietic_core.py  biogeo_probe.py  causal_timechain.py  constitution.py  credential_layer.py  dag_oracle.py  dashboard.py  docker-compose.yml  env_evolver.py  env_stream.py  epiplexity_api_pipeline.py  evaluator_daemon.py  ext_raw_ingestor.py  fractal_router.py  fs_bus.py  genome_assembler.py  git_msa_daemon.py  gradient_oracle.py  (+41 more)
crates/aevum-agi/doc/: CLAUDE.md  First Principles Whitepaper).md  Gemini update.md  P2 result.md  README300326.md  open?vault=Chaos&file=Opus-agi:tick6.0 log020426.inetloc  readme01.md  readme02.md  三位一體.md
crates/aevum-agi/doc/log/: 533500 logs.md  tick6.2.1log.md  tick6.2.1v2log.md  tick7.0log.md
crates/aevum-agi/inbox/: 1775765327_271a7129240b.md  1775765327_2f43e9c30001.md  1775765327_a1416ba187a9.md  1775765327_b3f892238c1b.md  1775765327_edbc1d1be4af.md  1775765627_284eb327f799.md  1775765627_9e7cd3a3f486.md  1775765627_a1a3403214a0.md  1775765627_b5ddd46018b3.md  1775765627_ba769b2de133.md  1775765927_08a0970ae9d0.md  1775765927_1c1f52728762.md  1775765927_439f399bce36.md  1775765927_5dd0a4258fbb.md  1775765927_d028c64a5044.md  1775766227_1cd9fbf3674b.md  1775766227_21cd8fc01e5c.md  1775766227_321411382895.md  1775766227_6a86bbeb5750.md  1775766227_758a38858c8f.md  1775766527_4ea87cb4254b.md  1775766527_4fdcbfd9b2d4.md  1775766527_63400e6b1104.md  1775766527_82eb09787848.md  1775766527_d237cebb5281.md  1775766827_4d074e12d350.md  1775766827_6d4e88023e16.md  1775766827_9f7376b13db4.md  1775766827_cbc4b7ebfa6f.md  1775766827_ff6634a44cf2.md  1775767127_049936a6cd0f.md  1775767127_53258ac83c36.md  1775767127_5dc4573e0476.md  1775767127_6a6dbd746a75.md  1775767127_cefaaca0ad7e.md  1775767427_36e970e13ed8.md  1775767427_6a6b2c55140f.md  1775767427_6ac7a15ec794.md  1775767427_a98bb21153bf.md  1775767427_fdd299638273.md  (+1285 more)
crates/aevum-agi/src/: boundary_osmosis.rs  causal_return.rs  dual_engine.rs  immune_response.rs  lib.rs  pareto_mcts.rs  rule_ir.rs
crates/aevum-core/: CLAUDE.md  Cargo.toml  aevum_backup.py  aevum_gateway.py  aevum_ledger_udp.py  aevum_ui.py  akashic_genes.jsonl  autopoiesis_lib.rs  causal-dag_lib.rs  ledger_audit.jsonl  pacr-type_lib.rs  snapshot.sh
crates/aevum-core/crates/causal-id/: Cargo.toml
crates/aevum-core/crates/epsilon-machine/: Cargo.toml
crates/aevum-core/crates/landauer-audit/: Cargo.toml
crates/aevum-core/crates/pacr-ledger/: Cargo.toml
crates/aevum-core/crates/pacr-types/: Cargo.toml
crates/aevum-core/ledger-core/: Cargo.toml
crates/aevum-core/ledger-core/src/: main.rs
crates/aevum-core/src/: allocator.rs  causal_dag.rs  clearinghouse.rs  cso.rs  epiplexity.rs  forwarder.rs  gateway.rs  ledger.rs  lib.rs  main_legacy.rs  pressure_gauge.rs  router.rs  runtime.rs  thermodynamics.rs
crates/aevum-core/tokio_clearinghouse/: Cargo.toml  aevum_udp_flood.py
crates/aevum-core/tokio_clearinghouse/src/: ledger.rs  main.rs
crates/aevum-mcp-server/: Cargo.toml
crates/aevum-mcp-server/src/: main.rs  router.rs  state.rs  symbolizer.rs
crates/aevum-mcp-server/src/resources/: context.rs  mod.rs
crates/aevum-mcp-server/src/tools/: filter.rs  mod.rs  recall.rs  remember.rs  settle.rs
crates/aevum-mcp-server/src/transport/: http.rs  mod.rs  stdio.rs
crates/agent-card/: .gitignore  Agent-to-Agent Protocol Layer.md  CNAME  Cargo.toml  FROZEN.md  LICENSE  README.md  SPEC-CAUSAL-TOPOLOGY.md  cli_interop.py  credential_layer.py  index.html  main.py  node_genome.py  oracle_agent.py  reality_contract.py  requirements.txt  resource_sovereignty.py  schema.json  traffic_generator.py  wiki_agent.py
crates/agent-card/.qwen/: settings.json  settings.json.orig
crates/agent-card/.well-known/: agent.json
crates/agent-card/adapters/: a2a_google_adapter.py  mcp_adapter.py  openai_adapter.py
crates/agent-card/core/: boundary.py  causal.py  economics.py  protocol.py  registry.py  router.py
crates/agent-card/examples/: code-review-agent.json  data-pipeline-agent.json  llm-agent.json
crates/agent-card/src/: envelope.rs  lib.rs  schema.rs
crates/agent-card/tests/: test_routing.py
crates/agent-card/transport/: dx_optimizer.py  mcp_adapter.py  server.py
crates/agent-card/validators/rust/: Cargo.toml
crates/autopoiesis/: Cargo.toml
crates/autopoiesis/src/: adjuster.rs  dormancy.rs  flood_detector.rs  gamma_calculator.rs  lib.rs
crates/causal-dag/: Cargo.toml  README.md
crates/causal-dag/src/: distance_tax.rs  lib.rs  merge.rs
crates/epsilon-engine/: Cargo.toml  README.md
crates/epsilon-engine/src/: bootstrap_backend.rs  complexity.rs  cssr.rs  lib.rs  quick_screen.rs  symbolize.rs
crates/ets-probe/: Cargo.toml
crates/ets-probe/src/: apple_uma.rs  lib.rs  linux_perf.rs  thermal_monitor.rs
crates/landauer-allocator/: Cargo.toml  README.md
crates/landauer-allocator/src/: lib.rs
crates/landauer-probe/: Cargo.toml
crates/landauer-probe/src/: lib.rs
crates/pacr-ledger/: Cargo.toml
crates/pacr-ledger/src/: lib.rs
crates/pacr-types/: Cargo.toml  README.md
crates/pacr-types/src/: complexity.rs  estimate.rs  ets.rs  landauer.rs  lib.rs  record.rs
crates/pacr-types/src/compliance/: cli.ts  commensuration-compliance.test.ts  identity-compliance.test.ts  pacr-compliance.ts
crates/pacr-types/src/core/: commensuration.ts
crates/pacr-types/src/types/: agent-card.ts  (+2 more)
(+54 files in other folders)
