# aevum_workspace/Cargo.toml
#
# Workspace root for the Aevum physics kernel + MCP server.
# See README.md for architecture overview.
#
# Build targets:
#   cargo test --workspace                                          # all tests
#   cargo build --release -p aevum-mcp-server                      # stdio transport
#   cargo build --release -p aevum-mcp-server --features transport-http  # HTTP transport

[workspace]
members = [
    "crates/pacr-types",
    "crates/causal-dag",
    "crates/landauer-probe",
    "crates/ets-probe",
    "crates/epsilon-engine",
    "crates/autopoiesis",
    "crates/aevum-core",
    "crates/agent-card",
    "crates/landauer-allocator",
    "crates/pacr-ledger",
    "crates/aevum-mcp-server",
]
# Exclude the legacy nested crates inside crates/aevum-core/crates/ —
# they are inert on disk and should not be discovered by the root workspace.
exclude = [
    "crates/aevum-core/crates/pacr-types",
    "crates/aevum-core/crates/causal-id",
    "crates/aevum-core/crates/landauer-audit",
    "crates/aevum-core/crates/epsilon-machine",
    "crates/aevum-core/crates/pacr-ledger",
]
resolver = "2"
