# aevum_workspace/Cargo.toml
#
# Workspace root for the Aevum physics kernel + MCP server.
# See README.md for architecture overview.
#
# Build targets:
#   cargo test --workspace                                          # all tests
#   cargo build --release -p aevum-mcp-server                      # stdio transport
#   cargo build --release -p aevum-mcp-server --features transport-http  # HTTP transport

[workspace]
members = [
    "crates/pacr-types",
    "crates/causal-dag",
    "crates/landauer-probe",
    "crates/ets-probe",
    "crates/epsilon-engine",
    "crates/autopoiesis",
    "crates/aevum-core",
    "crates/agent-card",
    "crates/landauer-allocator",
    "crates/pacr-ledger",
    "crates/aevum-mcp-server",
]
# Exclude the legacy nested crates inside crates/aevum-core/crates/ —
# they are inert on disk and should not be discovered by the root workspace.
exclude = [
    "crates/aevum-core/crates/pacr-types",
    "crates/aevum-core/crates/causal-id",
    "crates/aevum-core/crates/landauer-audit",
    "crates/aevum-core/crates/epsilon-machine",
    "crates/aevum-core/crates/pacr-ledger",
]
resolver = "2"

# ── Workspace-level lint policy ───────────────────────────────────────────────
# Physics code requires f64 ↔ integer casts. These pedantic lints are
# inappropriate for scientific computing and are allowed workspace-wide.
[workspace.lints.clippy]
cast_precision_loss   = "allow"  # u64 → f64 standard in physics
cast_possible_truncation = "allow"  # f64 → u8 in symbolization (intentional binning)
cast_sign_loss        = "allow"  # f64 → usize in array indexing
cast_possible_wrap    = "allow"  # usize → u8 for symbol alphabets
similar_names         = "allow"  # s_t / h_t / c_mu are domain-standard names
doc_markdown          = "allow"  # k_B, S_T, H_T are physics notation, not code
