# aevum_workspace/Cargo.toml
#
# Workspace root for the Aevum silicon-civilization kernel.
# Three-layer hourglass architecture:
#   Layer 1 (Substrate)   — aevum-core runtime
#   Layer 2 (Physical)    — CTP/TGP wire format (fused into aevum-core)
#   Layer 3 (Semantic)    — agent-card schema
#   Layer 4 (Entity)      — aevum-agi (genesis_node ONLY)
#
# Build targets:
#   cargo build --release --features genesis_node   # M1 Ultra full build
#   cargo build --release --features light_node     # AWS light build

[workspace]
members = [
    ".",
    "crates/pacr-types",
    "crates/causal-dag",
    "crates/landauer-probe",
    "crates/ets-probe",
    "crates/epsilon-engine",
    "crates/autopoiesis",
    "crates/aevum-core",
    "crates/agent-card",
    "crates/aevum-agi",
    "crates/landauer-allocator",
    "crates/pacr-ledger",
    "crates/aevum-mcp-server",
]
# Exclude the legacy nested crates inside crates/aevum-core/crates/ —
# they are inert on disk and should not be discovered by the root workspace.
exclude = [
    "crates/aevum-core/crates/pacr-types",
    "crates/aevum-core/crates/causal-id",
    "crates/aevum-core/crates/landauer-audit",
    "crates/aevum-core/crates/epsilon-machine",
    "crates/aevum-core/crates/pacr-ledger",
]
resolver = "2"

# ── Workspace-level lint policy ───────────────────────────────────────────────
# Physics code requires f64 ↔ integer casts. These pedantic lints are
# inappropriate for scientific computing and are allowed workspace-wide.
#
# 6 original (from GitHub open-source release) + 8 added for rustc 1.94.0 compat.
[workspace.lints.clippy]
# Original 6 — physics-justified allowances
cast_precision_loss    = "allow"  # u64 → f64 standard in physics
cast_possible_truncation = "allow" # f64 → u8 in symbolization (intentional binning)
cast_sign_loss         = "allow"  # f64 → usize in array indexing
cast_possible_wrap     = "allow"  # usize → u8 for symbol alphabets
similar_names          = "allow"  # s_t / h_t / c_mu are domain-standard names
doc_markdown           = "allow"  # k_B, S_T, H_T are physics notation, not code
# Added for rustc 1.94.0+ — new pedantic lints incompatible with scientific code
unreadable_literal     = "allow"  # hex constants (e.g., xorshift seeds)
redundant_closure      = "allow"  # closure-to-function in test helper
unwrap_or_default      = "allow"  # or_insert_with → or_default stylistic choice
doc_overindented_list_items = "allow" # ASCII diagrams in doc comments
cloned_instead_of_copied = "allow" # cloned() on Copy types in generic context
needless_pass_by_value = "allow"  # Arc/&T in async fn signatures
cast_lossless          = "allow"  # u32→f64 via as (alternative: f64::from)
module_name_repetitions = "allow" # redundant module names in type paths
iter_without_iter       = "allow"  # method named `iter` on non-Iterator type
unnested_or_patterns    = "allow"  # match arm or-patterns in nested types
let_underscore_untyped  = "allow"  # let _ = in test helper setup
manual_let_else        = "allow"  # stylistic preference for match over let-else

[package]
name    = "aevum"
version = "0.1.0"
edition = "2021"
# CLI binary: aevum run | status | verify | export | merge

[features]
default      = []
# M1 Ultra 128 GB UMA: full AGI engine + Apple Silicon hardware probes
genesis_node = ["aevum-core/genesis_node", "aevum-agi/genesis_node"]
# AWS Tokyo c7g.xlarge: CTP daemon + TGP validation + AgentCard routing only
light_node   = ["aevum-core/light_node"]

[dependencies]
aevum-core = { path = "crates/aevum-core" }
aevum-agi  = { path = "crates/aevum-agi" }
tokio      = { version = "1", features = ["full"] }
serde_json = "1"
serde      = { version = "1", features = ["derive"] }
toml       = "0.8"

[dev-dependencies]
