[workspace]
members = [
    ".",
    "crates/pacr-types",
    "crates/causal-id",
    "crates/landauer-audit",
    "crates/epsilon-machine",
    "crates/pacr-ledger",
]
resolver = "2"

[package]
name = "aevum-core"
version = "2.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.6"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
memmap2 = "0.9.10"
