# crates/agent-card/Cargo.toml
#
# Pillar: ALL. Layer 3: Semantic Waist.
#
# AgentCard — the self-declaration of an agent's identity, capabilities,
# and terms.  Pure schema; zero execution logic; zero network calls.
#
# This crate is the semantic boundary of the Four-Layer Hourglass.
# It depends ONLY on pacr-types (for CausalId), plus ecosystem utilities.
# It has NO dependency on aevum-core or any execution crate.

[package]
name        = "agent-card"
version     = "0.1.0"
edition     = "2021"
description = "AgentCard v1.0 schema — pure data schema, zero execution logic."

[lib]
path = "src/lib.rs"

[dependencies]
pacr-types = { path = "../pacr-types" }

serde      = { version = "1", features = ["derive"] }
serde_json = "1"
bytes      = { version = "1", features = ["serde"] }
smallvec   = { version = "1", features = ["serde"] }
thiserror  = "1"

[dev-dependencies]
