[package]
name          = "epsilon-engine"
version       = "0.1.0-alpha.1"
edition       = "2021"
description   = "CSSR ε-machine: statistical complexity S_T and entropy rate H_T from data streams."
license       = "Apache-2.0"
repository    = "https://github.com/kwailapt/aevum"
homepage      = "https://mcp.aevum.network"
documentation = "https://docs.rs/epsilon-engine"
keywords      = ["cssr", "epsilon-machine", "complexity", "entropy", "ai"]
categories    = ["science", "algorithms"]
readme        = "README.md"

# Pillar III. PACR field: Γ (CognitiveSplit).
# Implements the full Causal State Splitting Reconstruction (CSSR) algorithm.
# #![forbid(unsafe_code)] — pure math, no hardware access.

[features]
# M1 Ultra 128 GB UMA — enables MetalBootstrap stub in bootstrap_backend.rs.
genesis_node = []

[dependencies]
pacr-types = { path = "../pacr-types", version = "0.1" }

[dev-dependencies]
proptest = "1"
approx   = "0.5"

[lints]
workspace = true
