[package]
name = "pacr-ledger"
version = "0.1.0"
edition = "2021"
description = "Append-only, content-addressed persistent store for PACR records."

[dependencies]
pacr-types = { path = "../pacr-types" }
serde_json = "1"
thiserror  = "1"

[dev-dependencies]
bytes    = { version = "1", features = ["serde"] }
smallvec = { version = "1", features = ["serde"] }

[lints]
workspace = true
