[package]
name          = "pacr-types"
version       = "0.1.0"
edition       = "2021"
description   = "The PACR 6-tuple — physically annotated causal records for AI agents."
license       = "Apache-2.0"
repository    = "https://github.com/kwailapt/aevum"
homepage      = "https://mcp.aevum.network"
documentation = "https://docs.rs/pacr-types"
keywords      = ["ai", "memory", "causal", "thermodynamics", "physics"]
categories    = ["data-structures", "science"]
readme        = "README.md"

# Trust root: MUST carry #![forbid(unsafe_code)] unconditionally.
# Any memory escape in this crate invalidates ALL downstream PACR records.

[dependencies]
serde     = { version = "1", features = ["derive"] }
smallvec  = { version = "1", features = ["serde"] }
bytes     = { version = "1", features = ["serde"] }
thiserror = "1"

[dev-dependencies]
proptest = "1"

[lints]
workspace = true
