[package]
name = "tokio_clearinghouse"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
dashmap = "5.4"
sha2 = "0.10"
serde_json = "1.0"
memmap2 = "0.9.10"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
